client/stylesheets/style.css
.grid-block,
.main,
.post,
li .comment,
.comment-form {
    background: #fff;
    border-radius: 5px;
    padding: 10px;
    margin-bottom: 10px;
    -webkit-box-shadow: 0 5px 5px 2px rgba(0, 0, 0, 0.35);
    -moz-box-shadow: 0 5px 5px 2px rgba(0, 0, 0, 0.35);
    box-shadow: 0 5px 5px 2px rgba(0, 0, 0, 0.35);
}

body {
    background: #9370DB;
    color: #666666;
}

#main {
    position: relative;
}

.page {
    position: absolute;
    top: 0px;
    width: 100%;
}

/* for header templates */
.navbar {
    margin-bottom: 10px;
    background: #FFBBFF;
    border-color:#FFBBFF #FFBBFF #FFBBFF #FFBBFF;
}

.navbar .navbar-inner {
    border-radius: 0px 0px 3px 3px;
}

#navigation .navbar-nav .activeRoute {
    background: #FFB5C5;
}

/* for inner spinner template */
#spinner {
    height: 300px;
}

/* for post templates */
.post {
    /* For modern browsers */
    /* For IE 6/7 (trigger hasLayout) */
    *zoom: 1;
    position: relative;
    opacity: 1;
    background: #FFB5C5;
    /* for all sides */
    border-radius: 3em;
    /* for specified corners */
    border-bottom-left-radius:1.2em;
    border-bottom-right-radius:1.2em;
    -webkit-border-bottom-left-radius:1.2em;
    -webkit-border-bottom-right-radius:1.2em;
    -moz-border-bottom-left-radius:1.2em;
    -moz-border-bottom-right-radius:1.2em;
}

.post:before,
.post:after {
    content: "";
    display: table;
}

.post:after {
    clear: both;
}

.post.invisible {
    opacity: 0;
}

.post.instant {
    -webkit-transition: none;
    -moz-transition: none;
    -o-transition: none;
    transition: none;
}

.post.animate {
    -webkit-transition: all 300ms 0ms;
    -moz-transition: all 300ms 0ms ease-in;
    -o-transition: all 300ms 0ms ease-in;
    transition: all 300ms 0ms ease-in;
}

.post .upvote {
    display: inline-block;  
    margin: 1px 12px 0 0;
    float: left;
    border-radius: 2.5em;
    background: #EE2C2C ;
    border-color:#EE2C2C #EE2C2C #EE2C2C #EE2C2C;
    font-size: 20px;
    font-weight: bolder;
    color: black;
}

.post .post-content {
    float: left;
    display: inline-block;
}

.post .post-content h3 {
    margin: 0;
    line-height: 1.4;
    font-size: 18px;
}

.post .post-content h3 a {
    display: inline-block;
    font-size: 25px;
    margin-right: 10px;
}

.post .post-content h3 span {
    font-weight: normal;
    font-size: 20px;
    display: inline-block;
    color: #aaaaaa;
}

.post .post-content p {
    margin: 0;
    padding: 0;
    font-size: 10px;
    margin-top: 3px;
}

.post .discuss {
    display: inline-block;
    float: right;
    margin-top: 10px;
    border-radius: 2.5em;
    background: #EE6363;
    border-color:#EE6363 #EE6363 #EE6363 #EE6363;
}

/* for comments templates */
/* devided comments to left and right columns */
.mainContext {
    padding: 0;
    margin: 0;
}

.mainContext .leftContext {
    float: left;
    width: 49%;
    padding-right: 2px;
}

.mainContext .rightContext {
    float: right;
    width: 49%;
}

/* comments */
.comments {
    list-style-type: none;
    margin: 0;
}

.comments li {
    background-color: #9370DB;
}

.comments li:before,
.comments li:after {
    content: "";
    display: table;
}

.comments li:after {
    clear: both;
}

.comments li .comment {
    padding-top: 0;
    /* for all sides */
    border-radius: 4em;
    /* for specified corners */
    border-top-right-radius:1.2em;
    border-bottom-left-radius:1.2em;
    border-bottom-right-radius:1.2em;
    -webkit-border-top-right-radius:1.2em;
    -webkit-border-bottom-left-radius:1.2em;
    -webkit-border-bottom-right-radius:1.2em;
    -moz-border-top-right-radius:1.2em;
    -moz-border-bottom-left-radius:1.2em;
    -moz-border-bottom-right-radius:1.2em;
    background-color: #D1EEEE;
}

.comments li .alignLeft {
    float: left;
    width: 70%;
    margin: 0;
    margin-bottom: 10px;
}

.comments li .alignRight {
    float: right;
    width: 70%;
    margin: 0;
    margin-bottom: 10px;
    background-color: #FFE1FF;
}

 .leftContext li .comment {
    /* use default styles for now */
}

.rightContext li .comment {
    padding-top: 0;
    /* for all sides */
    border-radius: 4em;
    /* for specified corners */
    border-top-left-radius:1.2em;
    border-bottom-left-radius:1.2em;
    border-bottom-right-radius:1.2em;
    -webkit-border-top-left-radius:1.2em;
    -webkit-border-bottom-left-radius:1.2em;
    -webkit-border-bottom-right-radius:1.2em;
    -moz-border-top-left-radius:1.2em;
    -moz-border-bottom-left-radius:1.2em;
    -moz-border-bottom-right-radius:1.2em;
    background-color: #FFE1FF;
}

li .comment:before,
li .comment:after {
    content: "";
    display: table;
}

li .comment:after {
    clear: both;
}

.comment .comment-content {
    display: block;
    margin: 0;
    padding: 0;
    margin-top: 5px;
    margin-left: 20px;
    text-decoration: none;
}

.leftContext .comment .comment-content {
    /* use default styles for now */
}

.rightContext .comment .comment-content {
    padding: 0;
    margin-top: 1px;
    margin-left: 10px;
    margin-right: 15px;
}

.comment .challenges {
    margin: 0;
    margin-top: 2px;
    margin-right: 10px;
    font-size: 12px;
    display: block;
    float: right;
    color:#00868B;
}

.leftContext .comment .challenges {
    /* use default styles for now */
}

.rightContext .comment .challenges {
    float: left;
    color:#CD5C5C;
    margin-right: 5px;
    margin-left: 10px;
}

.comment .comment-content .author {
    font-size: 16px;
    color: orange;
}

.comment .comment-content .date {
    font-size: 8px;
    font-weight: normal;
    color: gray;
}

.comment .comment-content .text {
    margin: 0;
    padding: 0;
    font-size: 17px;
    margin-top: 3px;
    padding-top: 0;
}

.leftContext .comment .comment-content .text {
    /* use default styles for now */
}

.rightContext .comment .comment-content .text {
    color:#EE4000;
}

.comments li p:last-child {
    margin-bottom: 0;
}

/* arrows between two columns */
.comments li .leftArrow {
    display: inline-block;
    float: left;
    position:relative;
    top: 3px;
    left:-38px; /* 角的位置需要细心调试 */
    width:0;
    height:0;
    border:solid;
    border-width: 8px 25px 8px 0px;
    border-color: rgba(0, 0, 0, 0) rgba(148,0,211, 0.6) rgba(0, 0, 0, 0) rgba(0, 0, 0, 0);
}

.comments li .rightArrow {
    display: inline-block;
    float: right;
    position:relative;
    top:3px;
    right:-38px; /* 角的位置需要细心调试 */
    width:0;
    height:0;
    font-size:0;
    border:solid;
    border-width: 8px 0px 8px 25px;
    border-color: rgba(0, 0, 0, 0)  rgba(0, 0, 0, 0) rgba(0, 0, 0, 0) rgba(148,0,211, 0.6);
}

/* to hide comments which appear on the wrong column,
we do this to hide the comment while hold its place, so that
simulate a chatroom scienario.  */
.visibleDisallowed {
    visibility: hidden;
}

.dropdown-menu span {
    display: block;
    padding: 3px 20px;
    clear: both;
    line-height: 20px;
    color: #bbb;
    white-space: nowrap;
}

.load-more {
    display: block;
    background: rgba(0, 0, 0, 0.2);
    text-align: center;
    height: 60px;
    line-height: 60px;
    margin-bottom: 10px;
    font-size:20px;
    /* for all sides */
    border-radius: 3em;
    /* for specified corners */
    border-top-left-radius:1.2em;
    border-top-right-radius:1.2em;
    -webkit-border-top-left-radius:1.2em;
    -webkit-border-top-right-radius:1.2em;
    -moz-border-top-left-radius:1.2em;
    -moz-border-top-right-radius:1.2em;
}

.load-more:hover {
    text-decoration: none;
    background: rgba(0, 0, 0, 0.1);
}

.posts .spinner-container {
    position: relative;
    height: 100px;
}

.jumbotron {
    text-align: center;
}

.jumbotron h2 {
    font-size: 60px;
    font-weight: 100;
}

@-webkit-keyframes fadeOut {
    0% {
        opacity: 0;
    }
    10% {
        opacity: 1;
    }
    90% {
        opacity: 1;
    }
    100% {
        opacity: 0;
    }
}

@keyframes fadeOut {
    0% {
        opacity: 0;
    }
    10% {
        opacity: 1;
    }
    90% {
        opacity: 1;
    }
    100% {
        opacity: 0;
    }
}

.errors {
    position: fixed;
    z-index: 10000;
    padding: 10px;
    top: 0px;
    left: 0px;
    right: 0px;
    bottom: 0px;
    pointer-events: none;
}

.alert {
    animation: fadeOut 4000ms ease-in 0s 1 forwards;
    -webkit-animation: fadeOut 4000ms ease-in 0s 1 forwards;
    -moz-animation: fadeOut 4000ms ease-in 0s 1 forwards;
    width: 250px;
    float: right;
    clear: both;
    margin-bottom: 5px;
    pointer-events: auto;
}

